feat: add Redis + email verification
