# gapi/server.go
@@ -7,6 +7,7 @@ import (
 	"github.com/xiao-yangg/simplebank/pb"
 	"github.com/xiao-yangg/simplebank/token"
 	"github.com/xiao-yangg/simplebank/util"
+	"github.com/xiao-yangg/simplebank/worker"
 )
 
 // Server serves gRPC request
@@ -15,10 +16,11 @@ type Server struct {
 	config util.Config
 	store db.Store
 	tokenMaker token.Maker
+	taskDistributor worker.TaskDistributor
 }
 
 // NewServer creates a gRPC server
-func NewServer(config util.Config, store db.Store) (*Server, error) {
+func NewServer(config util.Config, store db.Store, taskDistributor worker.TaskDistributor) (*Server, error) {
 	tokenMaker, err := token.NewPasetoMaker(config.TokenSymmetricKey) // length 32
 	if err != nil {
 		return nil, fmt.Errorf("cannot create tokoen maker: %w", err)
@@ -28,6 +30,7 @@ func NewServer(config util.Config, store db.Store) (*Server, error) {
 		config: config,
 		store: store,
 		tokenMaker: tokenMaker,
+		taskDistributor: taskDistributor,
 	}
 
 	return server, nil
