# worker/task_send_verify_email.go
@@ -1,0 +1,96 @@
+package worker
+
+import (
+	"context"
+	"encoding/json"
+	"fmt"
+
+	"github.com/hibiken/asynq"
+	"github.com/rs/zerolog/log"
+	db "github.com/xiao-yangg/simplebank/db/sqlc"
+	"github.com/xiao-yangg/simplebank/util"
+)
+
+const (
+	TaskSendVerifyEmail = "task:send_verify_email"
+	DomainName = "simple-bank.org" // localhost:8080/v1
+	PathName = "/verify_email"
+)
+
+type PayloadSendVerifyEmail struct {
+	Username string `json:"username"`
+}
+
+func (distributor *RedisTaskDistributor) DistributeTaskSendVerifyEmail(
+	ctx context.Context,
+	payload *PayloadSendVerifyEmail,
+	opts ...asynq.Option,
+) error {
+	jsonPayload, err := json.Marshal(payload)
+	if err != nil {
+		return fmt.Errorf("failed to marshal task payload: %w", err)
+	}
+
+	task := asynq.NewTask(TaskSendVerifyEmail, jsonPayload, opts...)
+	info, err := distributor.client.EnqueueContext(ctx, task)
+	if err != nil {
+		return fmt.Errorf("failed to enqueue task: %w", err)
+	}
+
+	log.Info().
+		Str("type", task.Type()).
+		Bytes("payload", task.Payload()).
+		Str("queue", info.Queue).
+		Int("max_retry", info.MaxRetry).
+		Msg("enqueued task")
+
+	return nil
+}
+
+func (processor *RedisTaskProcessor) ProcessTaskSendVerifyEmail(
+	ctx context.Context, 
+	task *asynq.Task,
+) error {
+	var payload PayloadSendVerifyEmail
+	if err := json.Unmarshal(task.Payload(), &payload); err != nil {
+		return fmt.Errorf("failed to unmarshal payload %w", asynq.SkipRetry)
+	}
+
+	user, err := processor.store.GetUser(ctx, payload.Username)
+	if err != nil {
+		// if err != sql.ErrNoRows {
+		// 	return fmt.Errorf("user doesn't exist: %w", asynq.SkipRetry)
+		// }
+		return fmt.Errorf("failed to get user %w", err)
+	}
+
+	verifyEmail, err := processor.store.CreateVerifyEmail(ctx, db.CreateVerifyEmailParams{
+		Username: user.Username,
+		Email: user.Email,
+		SecretCode: util.RandomString(32),
+	})
+	if err != nil {
+		return fmt.Errorf("failed to create verify email: %w", err)
+	}
+	
+	// send email to user
+	subject := "Welcome to Simple Bank"
+	verifyUrl := fmt.Sprintf("https://%s%s?email_id=%d&secret_code%s", DomainName, PathName, verifyEmail.ID, verifyEmail.SecretCode)
+	content := fmt.Sprintf(`Hello %s,<br/>
+	Thank you for registering with us!<br/>
+	Please <a href="%s">click here</a> to verify your email address.<br/>
+	`, user.FullName, verifyUrl)
+	to := []string{user.Email}
+	err = processor.mailer.SendEmail(subject, content, to, nil, nil, nil)
+	if err != nil {
+		return fmt.Errorf("failed to send verify email: %w", err)
+	}
+
+	log.Info().
+		Str("type", task.Type()).
+		Bytes("payload", task.Payload()).
+		Str("email", user.Email).
+		Msg("processed task")
+		
+	return nil
+}
